# rubar

./: .travis.yml  Cargo.toml  build.rs
src/: draw.rs  main.rs  pangocairo_gen.rs  parser.rs  window.rs
src/drawables/: context.rs  image.rs  mod.rs  text.rs
src/parser/: color.rs  context.rs  font.rs  geometry.rs  image.rs  mod.rs  text.rs
