[package]
name = "rubar"
version = "0.1.0"
authors = ["Lucas David Traverso <lucas6246@gmail.com>"]

build = "build.rs"

description = "Status bar for x11 with the power of graphics"
repository = "https://github.com/ludat/rubar"
license = "MIT"
# homepage = ""
# documentation = ""

[dependencies]
cairo-sys-rs = { git = "https://github.com/ludat/cairo", features = ["xlib"]}
# cairo-rs = { path = "../mycairo/", features = ["xlib"]}
glib = { git = "https://github.com/gtk-rs/glib" }
pango-sys = { git = "https://github.com/gtk-rs/sys" }
x11 = "2.6.1"

[build-dependencies]
pkg-config = "0.3.8"
